Fix triangle aliasing issue in Firefox and allow triangles to overlap sections by 1px to prevent spacing issue in Firefox.

--- a/css/base/_globals.css
+++ b/css/base/_globals.css
@@ -25,7 +25,7 @@ a:hover {
 .triangle {
   position: absolute;
   left: 50%;
-  bottom: -33px;
+  bottom: -32px;
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
@@ -33,6 +33,7 @@ a:hover {
   height: 0;
   border-style: solid;
   border-width: 33px 42.5px 0 42.5px;
+  -moz-transform: translateX(-50%) scale(0.9999);
 }
 
 .form-control,
